[gd_scene load_steps=20 format=3 uid="uid://dfrtywmnvxhtp"]

[ext_resource type="Script" uid="uid://c4dp8el6n5xsq" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Shader" uid="uid://b1qnwyojwnbjx" path="res://resources/gradient.gdshader" id="2_ekxnf"]
[ext_resource type="FontFile" uid="uid://14dupcwgowyv" path="res://assets/Quicksand-VariableFont_wght.ttf" id="3_bqqt6"]
[ext_resource type="PackedScene" uid="uid://dxmotkl4kj0te" path="res://scenes/signal.tscn" id="4_8ln24"]
[ext_resource type="PackedScene" uid="uid://3gg7kmtytfne" path="res://scenes/wall.tscn" id="5_rtw2f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bqqt6"]
shader = ExtResource("2_ekxnf")
shader_parameter/background = true

[sub_resource type="QuadMesh" id="QuadMesh_wu84c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ekxnf"]
shader = ExtResource("2_ekxnf")
shader_parameter/background = false

[sub_resource type="FontVariation" id="FontVariation_rtw2f"]
base_font = ExtResource("3_bqqt6")
variation_opentype = {
2003265652: 400
}

[sub_resource type="LabelSettings" id="LabelSettings_bqqt6"]
font = SubResource("FontVariation_rtw2f")
font_size = 66

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wu84c"]
shader = ExtResource("2_ekxnf")
shader_parameter/background = false

[sub_resource type="FontVariation" id="FontVariation_8ln24"]
base_font = ExtResource("3_bqqt6")
variation_opentype = {
2003265652: 400
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqqt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(1, 1, 1, 0.0627451)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ln24"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtw2f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oa1go"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ln24"]
shader = ExtResource("2_ekxnf")
shader_parameter/background = false

[sub_resource type="LabelSettings" id="LabelSettings_rtw2f"]
font = SubResource("FontVariation_rtw2f")
font_size = 21

[node name="main_menu" type="Node2D"]
script = ExtResource("1_l6cm7")
colors_schemes = [[Color(0.9500058, 0.40381473, 0.99999887, 1), Color(0.53886443, 0.5989664, 0.9759663, 1), Color(0.61099464, 0.5515236, 0.9686268, 1), Color(0.28183243, 0.4905318, 0.89671236, 1)]]
colors_schemes_bg = [[Color(0.9801126, 0.7137965, 1, 1), Color(0.6781554, 0.72826487, 0.9854236, 1), Color(0.7724066, 0.75353724, 0.9827942, 1), Color(0.5054403, 0.66472226, 0.9643124, 1)]]

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
material = SubResource("ShaderMaterial_bqqt6")
position = Vector2(1088.0001, 320)
scale = Vector2(2495.9998, 666.947)
mesh = SubResource("QuadMesh_wu84c")

[node name="Label" type="Label" parent="."]
material = SubResource("ShaderMaterial_ekxnf")
offset_left = 64.0
offset_top = 64.0
offset_right = 896.0
offset_bottom = 192.0
text = "Signalquest:"
label_settings = SubResource("LabelSettings_bqqt6")
vertical_alignment = 1

[node name="buttons" type="VBoxContainer" parent="."]
offset_left = 64.0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 320.0

[node name="play" type="Button" parent="buttons"]
material = SubResource("ShaderMaterial_wu84c")
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_8ln24")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8ln24")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rtw2f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
text = "play"
alignment = 0

[node name="settings" type="Button" parent="buttons"]
material = SubResource("ShaderMaterial_wu84c")
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_8ln24")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8ln24")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rtw2f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
text = "settings"
alignment = 0

[node name="credits" type="Button" parent="buttons"]
material = SubResource("ShaderMaterial_wu84c")
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_8ln24")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8ln24")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rtw2f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
text = "credits"
alignment = 0

[node name="signal" parent="." instance=ExtResource("4_8ln24")]
position = Vector2(992, 288)
rotation_virtual = -90

[node name="wall" parent="." instance=ExtResource("5_rtw2f")]
position = Vector2(992, 96)

[node name="wall2" parent="." instance=ExtResource("5_rtw2f")]
position = Vector2(992, 544)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
position_smoothing_enabled = true
position_smoothing_speed = 2.5

[node name="credits_back" type="Button" parent="."]
material = SubResource("ShaderMaterial_wu84c")
custom_minimum_size = Vector2(0, 64)
offset_left = 1184.0
offset_top = 32.0
offset_right = 1632.0
offset_bottom = 96.0
theme_override_fonts/font = SubResource("FontVariation_8ln24")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8ln24")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rtw2f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
text = "back"
alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 1184.0
offset_top = 96.0
offset_right = 2304.0
offset_bottom = 608.0
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="credits" type="Label" parent="ScrollContainer"]
material = SubResource("ShaderMaterial_8ln24")
custom_minimum_size = Vector2(1120, 0)
layout_mode = 2
text = "Godot Engine:
godotengine.org/license

Font:
License
Copyright 2011 The Quicksand Project Authors (https://github.com/andrew-paglinawan/QuicksandFamily), with Reserved Font Name “Quicksand”.
This Font Software is licensed under the SIL Open Font License, Version 1.1 . This license is copied below, and is also available with a FAQ at: https://openfontlicense.org

SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007

PREAMBLE
The goals of the Open Font License (OFL) are to stimulate worldwide development of collaborative font projects, to support the font creation efforts of academic and linguistic communities, and to provide a free and open framework in which fonts may be shared and improved in partnership with others.

The OFL allows the licensed fonts to be used, studied, modified and redistributed freely as long as they are not sold by themselves. The fonts, including any derivative works, can be bundled, embedded, redistributed and/or sold with any software provided that any reserved names are not used by derivative works. The fonts and derivatives, however, cannot be released under any other type of license. The requirement for fonts to remain under this license does not apply to any document created using the fonts or their derivatives.

DEFINITIONS
\"Font Software\" refers to the set of files released by the Copyright Holder(s) under this license and clearly marked as such. This may include source files, build scripts and documentation.

\"Reserved Font Name\" refers to any names specified as such after the copyright statement(s).

\"Original Version\" refers to the collection of Font Software components as distributed by the Copyright Holder(s).
\"Modified Version\" refers to any derivative made by adding to, deleting, or substituting -- in part or in whole -- any of the components of the Original Version, by changing formats or by porting the Font Software to a new environment.

\"Author\" refers to any designer, engineer, programmer, technical writer or other person who contributed to the Font Software.

PERMISSION & CONDITIONS
Permission is hereby granted, free of charge, to any person obtaining a copy of the Font Software, to use, study, copy, merge, embed, modify, redistribute, and sell modified and unmodified copies of the Font Software, subject to the following conditions:

Neither the Font Software nor any of its individual components, in Original or Modified Versions, may be sold by itself.
Original or Modified Versions of the Font Software may be bundled, redistributed and/or sold with any software, provided that each copy contains the above copyright notice and this license. These can be included either as stand-alone text files, human-readable headers or in the appropriate machine-readable metadata fields within text or binary files as long as those fields can be easily viewed by the user.
No Modified Version of the Font Software may use the Reserved Font Name(s) unless explicit written permission is granted by the corresponding Copyright Holder. This restriction only applies to the primary font name as presented to the users.
The name(s) of the Copyright Holder(s) or the Author(s) of the Font Software shall not be used to promote, endorse or advertise any Modified Version, except to acknowledge the contribution(s) of the Copyright Holder(s) and the Author(s) or with their explicit written permission.
The Font Software, modified or unmodified, in part or in whole, must be distributed entirely under this license, and must not be distributed under any other license. The requirement for fonts to remain under this license does not apply to any document created using the Font Software.
TERMINATION
This license becomes null and void if any of the above conditions are not met.

DISCLAIMER
THE FONT SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM OTHER DEALINGS IN THE FONT SOFTWARE."
label_settings = SubResource("LabelSettings_rtw2f")
autowrap_mode = 2

[connection signal="pressed" from="buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="buttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="credits_back" to="." method="_on_credits_back_pressed"]
